# Results

./: Dockerfile  README.md  app.py  csv.csv  main.py  pyproject.toml  requirements.txt
